--- a/src/app.css
+++ b/src/app.css
@@ -2,14 +2,10 @@
 
 @plugin 'flowbite/plugin';
 
-@plugin "daisyui" {
-    themes: dark --default;
-}
-
-
 @custom-variant dark (&:where(.dark, .dark *));
 
-/* @theme {
+/* 
+@theme {
   --color-primary-50: #fff5f2;
   --color-primary-100: #fff1ee;
   --color-primary-200: #ffe4de;
